--- a/Rscript/roplspvs_Models_of_each_comparison.Rmd
+++ b/Rscript/roplspvs_Models_of_each_comparison.Rmd
@@ -182,7 +182,7 @@ pcorr increase allowing Q2 to decrease 1% during model selection in Model strate
 
 variable selection method: `r if(variable_selection_using_VIP=="yes") {paste("Using p(corr) and VIP")} else {paste("Using p(corr)")}`
 
-```{R subset sampleID and matrix, error=FALSE}
+```{R subset sampleID and matrix}
 
 # subset sampleID and matrix
 
@@ -392,6 +392,15 @@ save(list = ls(all.names = TRUE), file = directory_and_filename_rdata, envir = e
 ```{R}
 
 save(list = ls(all.names = TRUE), file = directory_and_filename_rdata, envir = environment())
+
+session_info(
+    pkgs = c("loaded")[1],
+    include_base = FALSE,
+    info = c("all"),
+    dependencies = NA,
+    to_file = paste(directory_output_reports,"/", "session-info_",projectname,
+    "_",date_of_analysis,"_created_",Sys.Date(),".txt", sep="")
+)
 
 rm(list = setdiff(ls(envir = environment()), c("model_table_to_analyse", "filename_model_table_to_analyse", "directory_model_table_to_analyse", "projectname", "date_of_analysis", "directory_Rmarkdownfiles", "filename_Rmarkdownfile_each_model", "filename_Rmarkdownfile_summary", "directory_input_matrix_sampleID", "filename_matrix", "decimal_separator", "variable_names_length", "variable_names_position", "filename_sampleID", "colname_groupID", "colname_secID", "directory_output_reports", "directory_and_filename_function_file", "p_pearson_of_pcorr_cutoff", "no_permutations_sans_vs","no_permutations_post_vs", "no_permutations_post_vs_selected_models", "no_permutations_over_vs", "replace_0",  "filter_percent_in_each_group", "replace_NA","log_transform", "groupsnumeric", "max_no_of_ortho_pre_vs", "max_no_of_ortho_post_vs", "each_model_or_summary", "prefered_pR2_and_pQ2_permutated_post_vs", "cluster", "reordered_levels_of_groups", "pcorr_diff", "variable_selection_using_VIP", "model_strategies_to_run")))
 ```
